package ArkhitekturaPO.Practocal.Practical_3.ISP;

interface Printer {
    void print();
}
