package ArkhitekturaPO.Practocal.Practical_3.ISP;

interface Scanner {
    void scan();
}
