package ArkhitekturaPO.Practocal.Practical_3.ISP;

class SimplePrinter implements Printer {
    public void print() {
        System.out.println("Простая печать документа");
    }
}
