package ArkhitekturaPO.Practocal.Practical_3.ISP;

class SimpleScanner implements Scanner {
    public void scan() {
        System.out.println("Сканирование документа");
    }
}
